# steks

./: .gitignore  CNAME  Cargo.toml  README.md  Tasks.md  android.html  capacitor.config.json  clippy.toml  index.html  manifest.json  netlify.toml  package.json  recording.js  steks-56c7d17a07b096cd.js  steks-73a93a7cbc5d797d.js  steks-9432825f72f644de.js  steks-9a12c5905a73543d.js  steks-9f97234dca05f8fa.js  steks-ca69d6ca71c1be4b.js  steks-ca9c759f83d75763.js  steks-e7c7a99e9cf22e79.js  styles.css  trunk.toml  web.js
.cargo/: config.toml
.github/workflows/: continuous_deployment.yml
ad_postbuild/: Cargo.toml
ad_postbuild/src/: base91.js  lzma.js  main.rs
android/app/: build.gradle
bevy_utils/: Cargo.toml
bevy_utils/src/: async_event_writer.rs  lib.rs  tracked_resource.rs  window_size.rs
fonts/: font-merging.txt
ios/App/: Podfile
leaderboard_migrate/: Cargo.toml
leaderboard_migrate/src/: hashes.csv  main.rs
level_editor/: Cargo.toml  cargo.toml
level_editor/src/: main.rs
netlify/edge-functions/: og-param-proxy.js
netlify/functions/image/: Cargo.toml  build.rs
netlify/functions/image/src/: color.rs  encoding.rs  fixed_shape.rs  main.rs  placement.rs  point.rs  svg.rs
netlify/functions/image/src/game_shape/: circle.rs  mod.rs  polygon.rs  polyomino.rs  rounded_polygon.rs
netlify/functions/image/src/screenshots/: mod.rs
netlify/functions/image/src/snapshots/: image__tests__all_colors_svg.snap  image__tests__all_shapes_svg.snap  image__tests__generate_png_no_overlay.snap  image__tests__generate_png_test.snap  image__tests__generate_svg_test.snap  image__tests__no_data_Default_1024x1024.png.snap  image__tests__test_data_Default_1024x1024.png.snap  image__tests__test_data_Default_1024x512.png.snap  image__tests__test_data_Default_512x1024.png.snap  image__tests__test_data_Default_512x512.png.snap  image__tests__test_data_No_Overlay_1024x1024.png.snap  image__tests__test_data_No_Overlay_512x1024.png.snap  image__tests__test_data_No_Overlay_512x512.png.snap  image__tests__test_data_SVG_1024x1024.svg.snap  image__tests__test_data_SVG_512x1024.svg.snap  image__tests__test_data_SVG_512x512.svg.snap  image__tests__unknown_test.snap
netlify/functions/leaderboard/: Cargo.toml
netlify/functions/leaderboard/src/: main.rs
obj_exports/levels/: steks_mat.mtl
plugins/: import-map.json
plugins/@capacitor/: app.js  core.js  device.js  local-notifications.js  share.js  splash-screen.js  toast.js
src/: app_redirect.rs  async_event_writer.rs  camera.rs  collision.rs  color.rs  constants.rs  draggable.rs  encoding.rs  fireworks.rs  fixed_shape.rs  import.rs  infinity.rs  input.rs  leaderboard.rs  level.rs  level_ui.rs  levels.yaml  logging.rs  main.rs  main_menu.rs  menu.rs  menu_action.rs  notifications.rs  padlock.rs  rain.rs  recording.rs  saved_data.rs  screen_diags.rs  set_level.rs  shape_maker.rs  shapes_vec.rs  share.rs  spirit.rs  user_state.rs  walls.rs  win.rs
src/game_shape/: circle.rs  mod.rs  polygon.rs  polyomino.rs
src/grid/: grid_error.rs  mod.rs  relative_coordinate.rs  shape.rs
src/screenshots/: mod.rs
src/wasm/: download.rs  mod.rs
steks/: Cargo.toml  android.html  build.rs  index.html  ios.html  manifest.json  news.yaml  purchase.js  purchase.ts  robots.txt  sitemap.txt  styles.css  video.js
steks/.well-known/: apple-app-site-association  assetlinks.json
steks/src/: Untitled-1.yml  achievements.rs  app_redirect.rs  async_event_writer.rs  asynchronous.rs  button.rs  camera.rs  collision.rs  compatibility.rs  constants.rs  credits.yaml  demo.rs  designed_level.rs  draggable.rs  fireworks.rs  game_level.rs  global_ui.rs  has_acted.rs  import.rs  infinity.rs  input.rs  insets.rs  leaderboard.rs  lens.rs  level.rs  level_state.rs  level_text_panel.rs  level_transition.rs  level_ui.rs  levels.yaml  logging.rs  main.rs  menu.rs  news.rs  notifications.rs  padlock.rs  platform.rs  prediction.rs  preview_images.rs  purchases.rs  (+26 more)
steks/src/game_shape/: circle.rs  mod.rs  polygon.rs  polyomino.rs
steks/src/snapshots/: steks__infinity__tests__check_shapes_sequence-2.snap  steks__infinity__tests__check_shapes_sequence-3.snap  steks__infinity__tests__check_shapes_sequence.snap
steks_ad/: Cargo.toml  index.html  trunk.toml
steks_ad/src/: button.rs  camera.rs  constants.rs  draggable.rs  fireworks.rs  global_ui.rs  has_acted.rs  infinity.rs  insets.rs  level.rs  level_text_panel.rs  level_ui.rs  main.rs  padlock.rs  prediction.rs  shape_creation_data.rs  startup.rs  text_button.rs  ui.rs  walls.rs  wasm.rs  win.rs  win_timer_state.rs
steks_base/: Cargo.toml
steks_base/src/: arrow.rs  camera.rs  change_level_event.rs  collision.rs  constants.rs  current_level.rs  demo_resource.rs  designed_level_meta.rs  draggable.rs  fireworks.rs  game_level.rs  has_acted.rs  infinity.rs  input.rs  insets.rs  level.rs  level_transition.rs  lib.rs  padlock.rs  prediction.rs  records.rs  rectangle_set.rs  settings.rs  shape_creation_data.rs  shape_maker.rs  shape_update_data.rs  shapes_vec.rs  snow.rs  spirit.rs  streak.rs  text_button.rs  ui.rs  ui_trait.rs  walls.rs  win.rs  win_timer_state.rs  window_size.rs  window_size_helpers.rs
steks_common/: Cargo.toml
steks_common/src/: ad_levels.yaml  color.rs  constants.rs  credits.yaml  designed_level.rs  encodable_shape.rs  encoding.rs  extra levels.yml  icon_button.rs  level_completion.rs  level_shape_form.rs  levels.yaml  lib.rs  location.rs  shape_index.rs  shape_location_state.rs  shape_state.rs  shapes_vec.rs  star_type.rs  tutorial_levels.yaml
steks_common/src/game_shape/: circle.rs  mod.rs  polygon.rs  polyomino.rs  rounded_polygon.rs  triangle.rs
steks_common/src/images/: dimensions.rs  drawing.rs  mod.rs  overlay.rs  svg.rs
steks_image/: Cargo.toml
steks_image/src/: dimensions.rs  drawing.rs  lib.rs  overlay.rs  placement.rs  svg.rs
steks_minimal/: Cargo.toml  index.html
steks_minimal/src/: button.rs  camera.rs  collision.rs  draggable.rs  fireworks.rs  global_ui.rs  infinity.rs  input.rs  insets.rs  level.rs  level_ui.rs  main.rs  prediction.rs  settings.rs  shape_component.rs  (+6 more)
(+39 files in other folders)
