[workspace]
members = [
"steks",
"steks_common",
"steks_image",
"netlify/functions/image",
"netlify/functions/leaderboard",
]
default-members = ["steks"]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
#opt-level = 1

[profile.release]
opt-level = 'z'
lto = 'thin'