[workspace]
members = [
"steks",
"steks_common",
"steks_ad",
"steks_image",
"steks_base",
"netlify/functions/image",
"netlify/functions/leaderboard",
"ad_postbuild",
"level_editor"
]
default-members = ["steks"]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1

[profile.release]
debug = false
opt-level = 'z'
codegen-units = 1
lto = 'fat'
strip = "debuginfo"
#panic = 'abort'
