[package]
name = "bevy_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

bevy_pkv = "0.8"
async-channel = "1.8"
serde = { version = "1", default-features = false }

[dev-dependencies]


[dependencies.bevy]
version = "0.11"


# Disable the default features if there are any that you do not want
default-features = false
features = []
