[package]
name = "steks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
itertools = "0.11"
bevy_prototype_lyon = {version="0.9"}
bevy_rapier2d = {version = "0.22"}

strum = { version = "0.25", features = ["derive"] }
bevy_tweening = { git = "https://github.com/wainwrightmark/bevy_tweening", default-features = false, features = ["bevy_text", "bevy_ui"] }
chrono = {version="0.4", features = ["serde", "wasmbind"]}
bevy_pkv = {git="https://github.com/wainwrightmark/bevy_pkv"}

serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1"
base64 = "0.21"
geometrid = "0.2.0"
serde_with = "3"
reqwest = { version = "0.11",default-features = false, features = ["json"] }
capacitor_bindings = {  features = ["web", "rate_plugin"], git = "https://github.com/wainwrightmark/capacitor_bindings" }
bevy_embedded_assets = "0.8.0"
lazy_static = "1.4.0"
serde_yaml = "0.9.21"
async-channel = "1.8.0"
steks_common = {path= "../steks_common"}


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen = "0.2"

web-sys = {version = "0.3", features = ['Url', 'Window', 'Element', 'HtmlElement', 'HtmlCollection', 'Location', 'UrlSearchParams']}
console_error_panic_hook = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.28", features=["x11"]}

[dev-dependencies]
insta = "1"
test-case = "3"

[profile.release]
opt-level = 'z'
lto = 'thin'
# debug=true

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[dependencies.bevy]
version = "0.11"



# Disable the default features if there are any that you do not want
default-features = false
features = [
  # These are the default features:
  # (keep whichever you like)

  # Bevy functionality:
#   "bevy_gilrs",         # Gamepad input support
#   "bevy_audio",         # Builtin audio
#   "filesystem_watcher", # Asset hot-reloading
  "bevy_winit",         # Window management
  "x11",                # Linux: Support X11 windowing system
#   "render",             # Graphics Rendering

  ## "render" actually just includes:
  ## (feel free to use just a subset of these, instead of "render")
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Higher-level rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
#   "bevy_pbr",           # 3D (physically-based) rendering
#   "bevy_gltf",          # GLTF 3D assets format support
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  "webgl2"

  # File formats:
  # "png",
#   "hdr",
#   "vorbis",

  # These are other features that may be of interest:
  # (add any of these that you need)

  # Bevy functionality:
#   "wayland",              # Linux: Support Wayland windowing system
#   "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
#   "serialize",            # Support for `serde` Serialize/Deserialize

  # File formats:
#   "bmp",
#   "tga",
#   "dds",
#   "jpeg",
#   "wav",
#   "flac",
#   "mp3",

  # Development/Debug features:
#   "dynamic",      # Dynamic linking for faster compile-times
#   "trace",        # Enable tracing for performance measurement
#   "trace_tracy",  # Tracing using `tracy`
#   "trace_chrome", # Tracing using the Chrome format
#   "wgpu_trace",   # WGPU/rendering tracing
]

[features]
web =["capacitor_bindings/web"]
android = ["capacitor_bindings/android"]
ios = ["capacitor_bindings/ios"]
