[package]
name = "steks_common"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
geometrid = "0.2.0"
once_cell = "1.18.0"
bevy_prototype_lyon = {version="0.8"}
bevy_rapier2d = {version = "0.21"}
bevy = { version = "0.10", default-features = false, features = ["bevy_render"] }
serde = "1.0.166"


[features]
bevy =[]
svg = []


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3