[package]
name = "steks_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
geometrid = {version = "0.3", features= ["glam"]}
once_cell = "1.18.0"
bevy_prototype_lyon = {version="0.9", default-features = false}
bevy_rapier2d = {version = "0.22"}
bevy = { version = "0.11", default-features = false, features = ["bevy_render"] }
serde = "1.0.166"
num_enum = "0.6.1"
strum = { version = "0.25", features = ["derive"] }
rand = "0.8.5"

[features]
bevy =[]
svg = []


# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
