[package]
name = "steks_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
geometrid = {version = "0.7", features= ["glam"]}
once_cell = "1.18"
bevy_prototype_lyon = {version="0.11", default-features = false}
bevy_rapier2d = "0.25"
bevy = { version = "0.13", default-features = false, features = ["bevy_render"] }
serde = "1"
num_enum = "0.7"
strum = { version = "0.26", features = ["derive"] }
rand = "0.8.5"
resvg = { version = "0.36", default-features = false }
anyhow = "1"
lazy_static = "1.4.0"
serde_yaml = "0.9"
serde_repr = "0.1"
steks_common = {path= "../steks_common"}

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
