[package]
edition = "2021"
name = "image"
version = "0.1.0"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = {version= "0.10", default-features=false, features=["apigw"]}
coolor = "0.5.1"
http = {version= "*", default-features=false}
lambda_runtime = {version= "*", default-features=false}
steks_common = {path="../../../steks_common"}

once_cell = "1.17.1"
resvg = { version = "0.34", default-features = false }
tokio = {version= "*", default-features=false}
base64 = "0.21"

[dev-dependencies]
insta = "1.29.0"
