[package]
edition = "2021"
name = "image"
version = "0.1.0"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = {version= "0.10", default-features=false, features=["apigw"]} #don't update this
lambda_runtime = {version= "0.8", default-features=false}
http = {version= "*", default-features=false}
steks_common = {path="../../../steks_common"}
steks_image = {path="../../../steks_image"}
base64 = "0.21"
tokio = {version= "*", default-features=false}
resvg = { version = "0.35", default-features = false, features=["text"] }

[dev-dependencies]
insta = "1.31"
test-case = "3.1.0"


[build-dependencies]
steks_common = {path="../../../steks_common"}