[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = {version= "0.9", default-features=false, features=["apigw"]}
lambda_runtime = {version= "*", default-features=false}
tokio = {version= "*", default-features=false}
itertools = "0.10.5"
planetscale-driver =  {git = "https://github.com/wainwrightmark/planetscale-driver" }
anyhow = "1.0.71"
