[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = {version= "0.9", default-features=false, features=["apigw"]}
lambda_runtime = {version= "*", default-features=false}
tokio = {version= "*", default-features=false}
itertools = "0.10.5"
planetscale-driver =  {version="0.4", default-features=false }
reqwest= {version= "0.11.17", default-features=false, features=["rustls-tls"]}
anyhow = "1.0.71"
